--- a/project-0/index.html
+++ b/project-0/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <title>Search</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
 </head>
+
 <body>
-    <form action="https://google.com/search">
-        <input type="text" name="q">
-        <input type="submit" value="Google Search">
+    <div id="navBar">
+        <a href="./googleImage.html"> google image search </a>
+        <br />
+        <a href="./googleAdvance.html"> google advance search </a>
+    </div>
+    <form id="searchForm" action="https://google.com/search">
+        <input type="text" name="q"><br />
+        <input id="searchButton" type="submit" value="Google Search">
     </form>
 </body>
+
 </html>
