--- a/project-0/googleImage.html
+++ b/project-0/googleImage.html
@@ -8,9 +8,10 @@
     <div id="navBar">
         <a href="./index.html"> go back </a>
     </div>
-    <form  id="searchForm" action="https://google.com/search">
+    <form id="searchForm" action="https://google.com/search">
+        <input name="tbm" type="hidden" value="isch">
         <input type="text" name="q"> <br />
-        <input  id="searchButton"  type="submit" value="Google Search">
+        <input id="searchButton" type="submit" value="Google Search">
     </form>
 </body>
 </html>
